test/fail/enums_and_variants/partial_scoped_variant.lly
#[
SyntaxError: Expected '.', not 'a label'.
    from partial_scoped_variant.lly:8
]#

enum Test[A] {
    .One(A)
    Two
}
